--- a/courses.css
+++ b/courses.css
@@ -1,6 +1,6 @@
 .flex-container-courses1{
     display:flex;
-    height: 300px;
+    flex-direction: column;
     background-color: whitesmoke;
     justify-content: flex-start;
     border-radius: 15px;
